<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroLogin.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="#E190DC94"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="272dp"
            android:layout_height="149dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vegetable" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewInicicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/inicio_sesion_titulo"
        android:textColor="#787373"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/hint_email"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInicicioSesion" />

    <EditText
        android:background="@drawable/edit_text"
        android:id="@+id/editTextContrasena"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_contrasena"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/buttonInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/iniciar_sesion"
        android:textStyle="bold"
        android:backgroundTint="#E190DC94"
        android:fontFamily="@font/adlam_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasena" />

    <TextView
        android:id="@+id/textNoTienes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/no_cuenta"
        android:fontFamily="@font/adlam_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasena"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="@+id/editTextContrasena"
        app:layout_constraintTop_toBottomOf="@+id/buttonInicioSesion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/registrate"
        android:textStyle="bold"
        android:fontFamily="@font/adlam_display"
        app:layout_constraintBottom_toBottomOf="@+id/textNoTienes"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasena"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toEndOf="@+id/textNoTienes"
        app:layout_constraintTop_toTopOf="@+id/textNoTienes"
        app:layout_constraintVertical_bias="0.0"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textRecuperarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/recuperar_contrasena"
        app:layout_constraintEnd_toEndOf="@+id/textRegistrate"
        app:layout_constraintStart_toStartOf="@+id/textNoTienes"
        app:layout_constraintTop_toBottomOf="@+id/textNoTienes" />

</androidx.constraintlayout.widget.ConstraintLayout>