<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="titulo"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewCarritoTituloTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:text="@string/total"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textViewProductoTitulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewProductoTitulo" />

            <TextView
                android:id="@+id/textViewProductoTituloCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cantidad"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textViewProductoTitulo"
                app:layout_constraintEnd_toStartOf="@+id/textViewCarritoTituloTotal"
                app:layout_constraintStart_toEndOf="@+id/textViewProductoTitulo"
                app:layout_constraintTop_toTopOf="@+id/textViewProductoTitulo" />

            <TextView
                android:id="@+id/textViewProductoPrecioKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/precio_producto_carrito_kg"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewProductoTitulo"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductoTitulo" />

            <TextView
                android:id="@+id/textViewProductoPrecioTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_total"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewProductoPrecioKg"
                app:layout_constraintEnd_toEndOf="@+id/textViewCarritoTituloTotal"
                app:layout_constraintTop_toTopOf="@+id/textViewProductoPrecioKg" />

            <TextView
                android:id="@+id/textViewProductoCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_producto_carrito_kg"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewProductoPrecioKg"
                app:layout_constraintEnd_toEndOf="@+id/textViewProductoTituloCantidad"
                app:layout_constraintStart_toStartOf="@+id/textViewProductoTituloCantidad"
                app:layout_constraintTop_toTopOf="@+id/textViewProductoPrecioKg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>